# Termux-API

./: .gitignore  README.md  test.txt
examples/: termux_dir.cpp  termux_info.cpp
include/: Termux.h  TurErrors.h  TurHelper.h  TurInfo.h  TurProcess.h  Turdefs.h  Turfs.h
src/: CMakeLists.txt  TurErrors.c  TurHelper.c  TurHelper.cpp  TurInfo.c  TurProcess.c  Turfs.c  Turfs.cpp  init.c
